--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div id="content">
             <!-- Chat will be shown here -->
         </div>
-        <div>
-            <input class="chat" type="text" placeholder="Nội dung" id="noidung">
+        <div id="sendzone">
+            <input class="chat" type="text" placeholder="Nội dung" id="noidung" disabled>
             <button class="chat" id="send" onclick="send()" disabled>Gửi</button>
         </div>
     </div>
