--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div id="alert"><p>Javasript chưa được load! Để sử dụng các chức năng của web, bạn phải Bật Javasript</p></div>
     </div>
     <div id="main">
+        <details id="list" style="margin-left: 0px;">
+            <summary>Trực tuyến</summary>
+        </details>
         <div id="content">
             <!-- Chat will be shown here -->
         </div>
@@ -22,6 +25,14 @@
             <input class="chat" type="text" placeholder="Nội dung" id="noidung" disabled>
             <button class="chat" id="send" onclick="send(document.getElementById('noidung').value);" disabled>Gửi</button>
         </div>
+        <details id="custom">
+            <summary>Tùy chỉnh</summary>
+        </details>
+        <div style="text-align:center; margin-top: 10px; margin-bottom: 10px; color:grey;">
+            <b style="font-size: large; margin-bottom:0px">classic-chatbox-client</b>
+            <p style="font-size: smaller; margin-top:0px">MIT License | <a href="https://github.com/thanhgaming5550/classic-chatbox-client/tree/v2" target=”_blank”>Source</a></p>
+        </div>
+        <div style="width: 100%; height: 10px;"></div>
     </div>
     <script src="script.js"></script>
 </body>
